# jsonfusion

./: .gitignore  Cargo.toml
src/: convert_writer.rs  create_table_state.rs  get_field_typed.rs  get_field_typed_type_inference.rs  json_display.rs  json_path_type_inference.rs  jsonfusion_hints.rs  jsonfusion_hooks.rs  jsonfusion_parquet_leaf_projection.rs  jsonfusion_physical_optimizer.rs  jsonfusion_value_counts_exec.rs  logging.rs  main.rs  manifest.rs  schema.rs  sql_ast_rewriter.rs  table_options.rs  table_provider.rs  type_planner.rs
tests/: sqlness.rs
tests/sqlness/pg/: 01_basic.result  01_basic.sql  02_hints.result  02_hints.sql  03_schema_merge.result  03_schema_merge.sql  04_get_field_typed.result  04_get_field_typed.sql  05_variant.result  05_variant.sql
