[package]
name = "jsonfusion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arrow = "55.2.0"
arrow-schema = { version = "55.2.0", features = ["serde"] }
async-trait = "0.1.89"
datafusion = "49.0.2"
datafusion-common = "49.0.2"
datafusion-expr = "49.0.2"
datafusion-postgres = "0.8.1"
futures = "0.3.31"
parquet = "55.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
simd-json = "0.14"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v7", "serde"] }
