[package]
name = "jsonfusion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arrow = "57"
arrow-schema = { version = "57", features = ["serde"] }
async-trait = "0.1.89"
bytes = "1"
datafusion = "51"
datafusion-common = "51"
datafusion-expr = "51"
datafusion-pg-catalog = "0.13"
datafusion-postgres = "0.13"
futures = "0.3.31"
object_store = "0.12.3"
parquet = { version = "57", features = ["experimental"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
simd-json = "0.14"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.18.0", features = ["v7", "serde"] }

[dev-dependencies]
sqlness = { version = "0.6.1", features = ["postgres"] }
tempfile = "3.0"
tokio-postgres = "0.7.15"
